# JobFit_AI

./: .coderabbit.yaml  .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  config.py  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 06f0fdde2175_add_resumes_and_resume_sections_tables.py  a1b2c3d4e5f6_add_billing_tables.py  d6c4808e418c_add_tenants_and_users_tables.py
backend/billing/: __init__.py
backend/billing/api/: __init__.py  routes.py
backend/billing/application/: __init__.py  dto.py  event_handlers.py  services.py
backend/billing/domain/: __init__.py  entities.py  factories.py  repository.py  services.py  value_objects.py
backend/billing/infrastructure/: __init__.py  models.py  repository_impl.py  stripe_gateway.py
backend/identity/: __init__.py
backend/identity/api/: __init__.py  routes.py
backend/identity/application/: __init__.py  commands.py  dto.py  services.py
backend/identity/domain/: __init__.py  entities.py  factories.py  repository.py  services.py  value_objects.py
backend/identity/infrastructure/: __init__.py  jwt_service.py  models.py  repository_impl.py
backend/interview/: __init__.py
backend/optimization/: __init__.py
backend/resume/: __init__.py
backend/shared/: __init__.py
backend/tests/: conftest.py  test_billing.py  test_billing_infra.py  test_identity.py  test_interview.py  test_optimization.py  test_resume.py  test_shared.py
(+151 files in other folders)
